# omnicompany

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
config/: content_parser_processor.yaml
docs/: ARCHITECTURE.md  README.md  SDK_CONTRACT.md  archmap.yaml  index.md  taxonomy.yaml
scripts/: README.md  _fix_parse_yaml_colons.py  _gen_yarn_blocks_index.py  _gen_yarn_entities_index.py  _gen_yarn_worldgen_index.py  _update_plan_refs_2026-05-15.py  _update_plan_refs_pass2_2026-05-15.py  agent_migrate_batch.py  boss_sight_scan_sessions.py  check_decisions.py  clean_env_smoke.py  cost_report.py  debug_avatar.py  debug_dark_text.py  debug_standalone_width.py  derive_schema_from_corpus.py  doctor_check.py  dogfood_dashboard_resilience_test.py  dogfood_dashboard_strict_test.py  dogfood_live.py  dump_all_fields.py  dump_codex_fields.py  dump_result_usage.py  e2e_chat_full.py  e2e_comprehensive.py  e2e_send_two_msgs.py  e2e_total.py  e2e_ws_reconnect.py  e2e_ws_reconnect_idempotent.py  eval_authored_vs_golden.py  eval_v2_2_phase_4c.py  external_agent_smoke.py  install.ps1  install.sh  install_git_hooks.py  live_cc_chat_e2e.py  prefabs_baseline.txt  prefabs_phase_Ia_batch.txt  prefabs_representative.txt  prefabs_tier3_siblings.txt  (+18 more)
scripts/dogfood/: guardian_judge_demo.py  v26_path_fixer.py
scripts/mc_threejs_render/: package-lock.json  package.json  render.html  server.js
src/omnicompany/: README.md  __init__.py  __main__.py  _core_version.py
templates/material/: 向导.md  注册件.yaml  范本.py  骨架.py
templates/plan/: 向导.md  注册件.yaml  范本.md  骨架.md
templates/template/: 向导.md  注册件.yaml  范本.md  骨架.md
tests/: conftest.py
tests/agent/: test_services_agent_loop_toy.py
tests/agent_tools/: test_agent_event_convergence.py  test_agent_node_loop_decommission.py  test_agent_spawn_surface.py  test_default_vs_deferred.py  test_external_agent_workers.py  test_io_tools_canary.py  test_trace_chain.py  test_wave3_agent_spawn.py  test_wave3_canary.py  test_wave4_canary.py  test_wave4b_bash_persistent.py  test_wave5_canary.py  test_wave5_read_edit_state.py  test_wave5b_prompt_replication.py  test_wave5c_llm_smoke.py  test_wave6_canary.py  test_wave7_canary.py  test_wave8_abort.py  test_wave8_canary.py  test_wave9_canary.py  test_web_tools_real.py
tests/authoring/: test_publish_pipeline_article_author_llmclient.py
tests/boss_sight/: test_workflow_orchestrator.py
tests/buses/: test_bash_bus_defense.py  test_bash_bus_subprocess_kill.py  test_buses_smoke.py  test_persistent_shell.py  test_team_builder_workers.py
tests/cli/: test_context_command.py  test_plan_command.py  test_worker_command.py
tests/dashboard/: test_agent_digest.py  test_boss_sight_llm_runtime_usage.py  test_boss_sight_material_registry.py  test_boss_sight_p0a_spawn_guard.py  test_boss_sight_v2_02_single_points.py  test_boss_sight_v2_04_pilotdeck.py  test_boss_sight_v2_05_entities.py  test_boss_sight_v2_06_07.py  test_boss_sight_v2_08_control_observability.py  test_boss_sight_v2_11_cockpit_backend.py  test_catalogue_material_attribution.py  test_cc_chat_event_persistence.py  test_cc_chat_midturn.py  test_cc_chat_plan_inject.py  test_cc_chat_real_e2e.py  test_cc_chat_ui_long_observer.py  test_cc_wrapper.py  test_ccdaemon_log_rotation.py  test_chat_wire_nm.py  test_codex_provider_interrupt.py  test_dashboard_visual.py  test_external_agents_api.py  test_native_agent_integration.py  test_reviewstage_material_types.py
tests/docauthor/: test_final_lander_quarantine.py
tests/doctor/: test_blackboard_workers.py  test_doctor_contextual_audit.py  test_doctor_router_diagnosis.py  test_health_writers_contract.py
(+689 files in other folders)
