[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnicompany"
version = "0.2.0"
description = "AI-native software factory — intent-driven, event-bus-native agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "omnicompany contributors" }
]
keywords = ["ai", "agent", "factory", "event-bus", "orchestration"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
  "pydantic>=2.0.0",
  "python-ulid>=2.0.0",
  "click>=8.0.0",
  "anthropic>=0.40.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
redis = [
  "redis[hiredis]>=5.0.0",
]
evolution = [
  "datasets>=2.0.0",
]
dashboard = [
  "fastapi>=0.100.0",
  "uvicorn[standard]>=0.20.0",
  "jinja2>=3.1.0",
]
selftest = [
  "playwright>=1.40.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/ColorC/make-ai-slop-more-efficiently"
Repository = "https://github.com/ColorC/make-ai-slop-more-efficiently"

[tool.hatch.build.targets.wheel]
packages = ["src/omnicompany"]

[project.scripts]
omni = "omnicompany.cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
markers = [
  "e2e: 需要真实 API key 的端到端测试（THE_COMPANY_API_KEY）",
  "slow: 慢测试 (>10s · 如 agent loop · 真跑 LLM 多轮)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# CI 阻断只看真 bug（语法错误 / pyflakes 错误类）。undefined-name（F82）因 ruff 对
# 字符串前向引用注解误报而未纳入；海量 cosmetic（unused-import / f-string 占位符等）
# 尚未清理，留作 good-first-issue 渐进收敛，不阻断构建。
select = ["E9", "F63", "F7"]
